[package]
name = "backend-test"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
bcrypt = "0.17.0"
dotenvy = "0.15.7"
serde = { version="1.0.219", features = ["derive"] }
sqlx = { version="0.8.3", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
tokio = { version="1.44.1", features = ["full"] }
